# Hastur-Hastur-Hastur-Hastur

./: PERSEPHONE_STAGE8_CONTESTATION (1).md  README.md
ruinware-v3.0/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  ruinware.py
ruinware-v3.0/assets/: banner.txt
ruinware-v3.0/docs/: COGITATOR.md  LAMENT_CONFIG.md  WITNESS_BASELINE.md
ruinware-v3.0/tests/: test_engine.py
