[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruinware"
version = "3.0.0"
description = "Sovereign Operating System Shell — Divine Geometry meets Hard Logic"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Nobody"}
]
keywords = [
    "sovereign", "consciousness", "architecture", "commons",
    "operating-system", "puzzle", "golden-ratio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = []

[project.optional-dependencies]
ai = ["requests>=2.28.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Repository = "https://github.com/nobody/ruinware"
Documentation = "https://github.com/nobody/ruinware/tree/main/docs"

[project.scripts]
ruinware = "ruinware:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
